# life-engine-core

./: .dockerignore  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  deny.toml  docker-compose.test.yml  docker-compose.yml  justfile  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: plugin-submission.md
.github/workflows/: ci.yml.disabled  (+1 more)
.odm/: change_log.md
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/src/: main.rs
apps/core/: Cargo.toml  Dockerfile  openapi.yaml  project.json
apps/core/src/: audit.rs  canonical_migrations.rs  config.rs  conflict.rs  connector.rs  credential_bridge.rs  credential_store.rs  crypto.rs  error.rs  event_bridge.rs  federation.rs  household.rs  identity.rs  install_service.rs  main.rs  manifest.rs  message_bus.rs  pg_storage.rs  plugin_loader.rs  plugin_signing.rs  rate_limit.rs  rekey.rs  schema_registry.rs  search.rs  search_processor.rs  shutdown.rs  sqlite_storage.rs  storage.rs  storage_migration.rs  sync_primitives.rs  test_helpers.rs  tls.rs  wasm_adapter.rs  wasm_runtime.rs
apps/core/src/auth/: jwt.rs  local_token.rs  middleware.rs  mod.rs  oidc.rs  routes.rs  webauthn_provider.rs  webauthn_store.rs
apps/core/src/routes/: conflicts.rs  connectors.rs  credentials.rs  data.rs  events.rs  federation.rs  graphql.rs  health.rs  household.rs  identity.rs  mod.rs  plugins.rs  quarantine.rs  search.rs  storage.rs  system.rs
apps/core/tests/: build_verification_test.rs  ci_check_test.rs  config_test.rs  dev_environment_test.rs  docker_test.rs  registry_validation_test.rs  schema_validation_test.rs  shutdown_test.rs  structured_logging_test.rs
apps/core/tests/fixtures/: test_rsa_private.pem  test_rsa_public.pem
deploy/: .env.example  Dockerfile  arm64-build.md  docker-compose.full.yml  docker-compose.yml  install.sh  verify-arm64.sh
docs/: cdm-specification.md  dns-srv-records.md  federation-protocol.md
plugins/engine/api-caldav/: Cargo.toml  manifest.toml  project.json
plugins/engine/api-caldav/src/: discovery.rs  error.rs  lib.rs  protocol.rs  serializer.rs
plugins/engine/api-carddav/: Cargo.toml  manifest.toml  project.json
plugins/engine/api-carddav/src/: discovery.rs  error.rs  lib.rs  protocol.rs  serializer.rs
plugins/engine/backup/: Cargo.toml  manifest.toml  project.json
plugins/engine/backup/src/: backend.rs  config.rs  crypto.rs  engine.rs  error.rs  lib.rs  retention.rs  schedule.rs  types.rs
plugins/engine/backup/src/backend/: local.rs  s3.rs  webdav.rs
plugins/engine/backup/src/steps/: mod.rs
plugins/engine/backup/src/tests/: mod.rs
plugins/engine/backup/src/transform/: mod.rs
plugins/engine/connector-calendar/: Cargo.toml  manifest.toml  project.json
plugins/engine/connector-calendar/src/: caldav.rs  config.rs  error.rs  google.rs  lib.rs  normalizer.rs  types.rs
plugins/engine/connector-calendar/src/steps/: mod.rs
plugins/engine/connector-calendar/src/tests/: mod.rs
plugins/engine/connector-calendar/src/transform/: mod.rs
plugins/engine/connector-calendar/tests/: radicale_integration.rs
plugins/engine/connector-contacts/: Cargo.toml  manifest.toml  project.json
plugins/engine/connector-contacts/src/: carddav.rs  config.rs  error.rs  google.rs  lib.rs  normalizer.rs  types.rs
plugins/engine/connector-contacts/src/steps/: mod.rs
plugins/engine/connector-contacts/src/tests/: mod.rs
plugins/engine/connector-contacts/src/transform/: mod.rs
plugins/engine/connector-contacts/tests/: radicale_integration.rs
plugins/engine/connector-email/: Cargo.toml  manifest.toml  project.json
plugins/engine/connector-email/src/: config.rs  error.rs  imap.rs  lib.rs  normalizer.rs  smtp.rs  types.rs
plugins/engine/connector-email/src/steps/: mod.rs
plugins/engine/connector-email/src/tests/: mod.rs
plugins/engine/connector-email/src/transform/: mod.rs
plugins/engine/connector-email/tests/: e2e_email_flow.rs  greenmail_integration.rs
plugins/engine/connector-filesystem/: Cargo.toml  manifest.toml  project.json
plugins/engine/connector-filesystem/src/: config.rs  error.rs  lib.rs  local.rs  normalizer.rs  s3.rs  types.rs
plugins/engine/connector-filesystem/src/steps/: mod.rs
plugins/engine/connector-filesystem/src/tests/: mod.rs
plugins/engine/connector-filesystem/src/transform/: mod.rs
plugins/engine/connector-filesystem/tests/: s3_integration.rs
plugins/engine/search-indexer/: Cargo.toml  manifest.toml  project.json
plugins/engine/search-indexer/src/: config.rs  error.rs  lib.rs  types.rs
plugins/engine/search-indexer/src/steps/: mod.rs
plugins/engine/search-indexer/src/tests/: mod.rs
plugins/engine/search-indexer/src/transform/: mod.rs
plugins/engine/webhook-receiver/: Cargo.toml  manifest.toml  project.json
plugins/engine/webhook-receiver/src/: error.rs  lib.rs  mapping.rs  models.rs  signature.rs
plugins/engine/webhook-sender/: Cargo.toml  manifest.toml  project.json
plugins/engine/webhook-sender/src/: config.rs  delivery.rs  error.rs  lib.rs  models.rs  types.rs
plugins/engine/webhook-sender/src/steps/: mod.rs
plugins/engine/webhook-sender/src/tests/: mod.rs
plugins/engine/webhook-sender/src/transform/: mod.rs
registry/: plugin-registry.json
scripts/: check-schema-compat.sh  validate-plugin-submission.js  validate-registry-index.js
tools/: verify-docker-image-size.sh
tools/templates/plugin/: Cargo.toml  manifest.toml
tools/templates/plugin/src/: config.rs  error.rs  lib.rs  types.rs
tools/templates/plugin/src/steps/: mod.rs
tools/templates/plugin/src/tests/: mod.rs
tools/templates/plugin/src/transform/: mod.rs
workflows/: collection.create.yaml  collection.delete.yaml  collection.get.yaml  collection.list.yaml  collection.update.yaml  graphql.query.yaml  system.health.yaml
(+372 files in other folders)
