[workspace]
resolver = "2"
members = [
    # Core binary
    "apps/core",

    # Foundation packages
    "packages/types",
    "packages/traits",
    "packages/crypto",
    "packages/plugin-sdk-rs",

    # Infrastructure packages
    "packages/storage-sqlite",
    "packages/auth",
    "packages/workflow-engine",
    "packages/plugin-system",

    # Transport packages
    "packages/transport-rest",
    "packages/transport-graphql",
    "packages/transport-caldav",
    "packages/transport-carddav",
    "packages/transport-webhook",

    # Shared utilities
    "packages/dav-utils",
    "packages/test-utils",
    "packages/test-fixtures",

    # First-party plugins
    "plugins/engine/connector-email",
    "plugins/engine/connector-calendar",
    "plugins/engine/connector-contacts",
    "plugins/engine/connector-filesystem",
    "plugins/engine/webhook-sender",
    "plugins/engine/webhook-receiver",
    "plugins/engine/search-indexer",
    "plugins/engine/backup",
    "plugins/engine/api-caldav",
    "plugins/engine/api-carddav",
]
exclude = [
    "apps/app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/life-engine-org/life-engine"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
rpassword = "7"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
hex = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
jsonschema = "0.29"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tantivy = "0.22"
mime_guess = "2"
governor = { version = "0.8", features = ["std", "dashmap", "jitter"] }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
url = "2"
urlencoding = "2"
webauthn-rs = { version = "0.5.4", features = ["danger-allow-state-serialisation"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
postgres-types = { version = "0.2", features = ["derive", "with-serde_json-1", "with-chrono-0_4"] }
extism = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "pem"] }
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"
tokio-postgres-rustls = "0.13"
rustls-native-certs = "0.8"
directories = "6"
base64 = "0.22"
toml = "0.8"
cron = "0.15"
semver = "1"
tempfile = "3"
wiremock = "0.6"
