[package]
name = "life-engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Life Engine Core - self-hosted personal data sovereignty backend"

[[bin]]
name = "life-engine-core"
path = "src/main.rs"

[dependencies]
life-engine-types = { path = "../../packages/types" }
life-engine-plugin-sdk = { path = "../../packages/plugin-sdk-rs" }
life-engine-crypto = { path = "../../packages/crypto" }
life-engine-traits = { path = "../../packages/traits" }
life-engine-storage-sqlite = { path = "../../packages/storage-sqlite" }
life-engine-auth = { path = "../../packages/auth" }
life-engine-workflow-engine = { path = "../../packages/workflow-engine" }
life-engine-plugin-system = { path = "../../packages/plugin-system" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
tower-http = { workspace = true }
directories = { workspace = true }
rusqlite = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
jsonschema = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
tantivy = { workspace = true }
base64 = { workspace = true }
governor = { workspace = true }
rpassword = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { version = "0.5", features = ["util"] }
url = { workspace = true }
urlencoding = { workspace = true }
webauthn-rs = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
postgres-types = { workspace = true }
extism = { workspace = true }
ed25519-dalek = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tokio-postgres-rustls = { workspace = true }
rustls-native-certs = { workspace = true }

[dev-dependencies]
life-engine-test-utils = { path = "../../packages/test-utils" }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
urlencoding = "2"
rcgen = "0.13"
rsa = { version = "0.9", features = ["pkcs5", "pem"] }
base64 = { workspace = true }
