[package]
name = "backup"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Encrypted remote backup plugin for Life Engine Core"

[lib]
name = "backup"
path = "src/lib.rs"

[features]
integration = ["aws-sdk-s3", "aws-config"]

[dependencies]
life-engine-plugin-sdk = { path = "../../../packages/plugin-sdk-rs" }
life-engine-types = { path = "../../../packages/types" }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
argon2 = { workspace = true }
reqwest = { workspace = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
flate2 = "1"
cron = "0.13"

[dev-dependencies]
life-engine-test-utils = { path = "../../../packages/test-utils" }
tempfile = "3"
tokio = { workspace = true }
