[package]
name = "connector-contacts"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CardDAV and Google Contacts connector plugin for Life Engine Core"

[lib]
name = "connector_contacts"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
life-engine-plugin-sdk = { path = "../../../packages/plugin-sdk-rs" }
life-engine-types = { path = "../../../packages/types" }
dav-utils = { path = "../../../packages/dav-utils" }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
base64 = "0.22"
url = "2"

[dev-dependencies]
life-engine-test-utils = { path = "../../../packages/test-utils" }
mockito = "1"
reqwest = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
