[package]
name = "search-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Full-text search indexing plugin for Life Engine Core"

[lib]
name = "search_indexer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
life-engine-plugin-sdk = { path = "../../../packages/plugin-sdk-rs" }
life-engine-types = { path = "../../../packages/types" }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tantivy = { workspace = true }

[dev-dependencies]
life-engine-test-utils = { path = "../../../packages/test-utils" }
tokio = { workspace = true }
