[package]
name = "webhook-sender"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Webhook sender plugin for Life Engine Core — dispatches events to external webhook URLs"

[lib]
name = "webhook_sender"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
life-engine-plugin-sdk = { path = "../../../packages/plugin-sdk-rs" }
life-engine-types = { path = "../../../packages/types" }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }

[dev-dependencies]
life-engine-test-utils = { path = "../../../packages/test-utils" }
tokio = { workspace = true }
